index.html about dataset format changed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <h2>Getting Started</h2>
                 </div>
                 <p> We've built a few resources to help you get started with the dataset. </p>
-                <p> Download a copy of the dataset (distributed under the  <a href="http://creativecommons.org/licenses/by-sa/4.0/legalcode">CC BY-SA 4.0</a> license):
+                <p> Download a copy of the dataset (distributed under the  <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a> license):
                 <ul class="list-unstyled">
                   <li><a class="btn actionBtn inverseBtn" href="https://drive.google.com/drive/folders/1XArVCRyQ-eyeS-Mxk3TvxV4JzqDq7KCu?usp=sharing">Dataset</a></li>
                 </ul>
@@ -65,7 +65,7 @@
                 <div class="infoHeadline">
                   <h2>Cite as:</h2>
                 </div>
-                <p> K. Mangalam, S. Sarkar, Y. Dogra, M. Saini, N. Goel. What Did the Chicken Say?: A Multi-class Classification Method on Chicken Vocalisations. International Conference on Systems and Technologies for Smart Agriculture (ICSTA 2023)</p>
+                <p> K. Mangalam, S. Sarkar, Y. Dogra, M. Saini, N. Goel. <i>What Did the Chicken Say?: A Multi-class Classification Method on Chicken Vocalisations.</i> International Conference on Systems and Technologies for Smart Agriculture (ICSTA 2023)</p>
                 <div class="infoHeadline">
                   <h2>Have Questions?</h2>
                 </div>
@@ -82,9 +82,11 @@
               	<div class="infoHeadline">
                   <h2>About Dataset</h2>
                 </div>
+                <p>Sample Data:</p>
                 <audio controls>
 				  <source src="/CDC23/assets/audio/distress.wav" type="audio/wav">
 				</audio>
+				<p>Distress mel spectogram of the above audio</p>
                 <img src="/CDC23/assets/img/distress.jpg" alt="Distress">
                 <div class="infoHeadline">
                   <h2>Results</h2>
@@ -100,7 +102,7 @@
                     <td></td>
                     <td>
                       Baseline
-                      <p class="institution">IIT Ropar</p>
+                      <p class="institution">Indian Institute of Technology, Ropar</p>
                       <a href="#">(Kumar, Sarkar & Dogra et. al. '23)</a>
                     </td>
                     <td>92.23</td>
@@ -118,7 +120,7 @@
         <div class="rightNav">
           <div>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/CDC23/">[CD]<sub>2</sub></a></li>
+              <li><a href="/CDC23/">[CD]<sup>2</sup></a></li>
               <li><a href="https://cse.iitrpr.ac.in/mrig/cse.iitrpr.ac.in/mrig/index.html">Multimedia Research and Innovation Group</a></li>
             </ul>
           </div>
