index.html href updated

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/CDC23/">Home</a></li>
+              <li><a href="https://cse.iitrpr.ac.in/mrig/cse.iitrpr.ac.in/mrig/index.html" target="_blank">MRIG</a></li>
             </ul>
           </div>
         </div>
@@ -58,7 +59,7 @@
                 <p> We've built a few resources to help you get started with the dataset. </p>
                 <p> Download a copy of the dataset (distributed under the  <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a> license):
                 <ul class="list-unstyled">
-                  <li><a class="btn actionBtn inverseBtn" href="https://drive.google.com/drive/folders/1XArVCRyQ-eyeS-Mxk3TvxV4JzqDq7KCu?usp=sharing">Dataset</a></li>
+                  <li><a class="btn actionBtn inverseBtn" href="https://drive.google.com/drive/folders/1XArVCRyQ-eyeS-Mxk3TvxV4JzqDq7KCu?usp=sharing" target="_blank">Dataset</a></li>
                 </ul>
                 </p>
                 <p>Because [CD]<sup>2</sup> is an ongoing effort, we expect the dataset to evolve.</p>
